
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Eric Zhuo Chen", email = "zyxirchen@outlook.com"},
]
dependencies = [
    "numpy>=1.24.4",
    "sympy>=1.12",
    "tqdm>=4.66.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "python-lsp-server>=1.7.4",
    "pylsp-mypy>=0.6.7",
    "python-lsp-black>=1.3.0",
    "pylsp-rope>=0.1.11",
    "python-lsp-ruff>=1.5.1",
    "pyls-isort>=0.2.2",
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true